[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/BulletHellper/Source/BulletPattern.gd" type="Script" id=1]
[ext_resource path="res://addons/BulletHellper/BasicBullets/SimpleBullet.tscn" type="PackedScene" id=2]




[node name="BulletPattern" type="Node2D"]
script = ExtResource( 1 )
bullet_scene = ExtResource( 2 )
bullet_cooldown = 0.5
bullet_num = 5
shot_type = 1
spread = 30.0
direction = Vector2( 0, 1 )

[node name="Timer" type="Timer" parent="."]

[node name="InShotTimer" type="Timer" parent="."]
one_shot = true

[node name="InitialWaitTimer" type="Timer" parent="."]

[node name="BetweenShotTimer" type="Timer" parent="."]
one_shot = true
